		- When you specify x & y with getSig(), q-values are recalculated from just those selected tests to reduce impact of multiple testing correction.
		- You can now specify an 'alpha' for getSig() [ 0.05 by default to match cuffdiff default ] by which to filter the resulting significance calls.
	
	Bugfixes:
		- Fixed bug in getGenes that may have resulted in long query lag for retrieving promoter diffData.
		- CuffData fpkm argument 'features' now returns appropriate data.frame (includes previously un-reported data fields).
		- Replaced all instances of 'ln_fold_change' with the actual 'log2_fold_change'.  Values were previously log2 fold change but database headers were not updated to reflect this.
	
	Notes:
		- ***The structure of the underlying database has changed in this version.  As a consequence, you must rebuild you cuffData.db file to use new version. readCufflinks(rebuild=T)***
		- Updated vignette
		- A 'fullnames' logical argument was added to fpkmMatrix. If True, rownames for fpkmMatrix will be a concatenation of gene_short_name and tracking_id.
		This has the added benefit of making row labels in csHeatmap easier to read, as well as preserving uniqueness. 
	
v1.1.1
	Bugfixes:
		- fixed issue in which there was no graceful error handling of missing CDS or TSS data in cuffdiff output.
		- Fixed issue in which distribution test data (promoters, splicing, relCDS) were not appropriately added to objects on creation.
		- Fixed bug that would sometimes cause csBoxplot() to throw an error when log-transforming fpkm data. Also added pseudocount argument.
		- Fixed bug that would cause diffData() to return a filtered subset of results by default.
		- Adjusted indexing of tables to improve performance on large datasets.
		- Fixed bug that caused diffData method to not be registered with CuffFeature and CuffGene objects.
		- Fixed bug that sometimes caused over-plotting of axis labels in csBarplots.  
		
	New Features:	