@@ -28,6 +28,7 @@ exportMethods(
 			csBoxplot,
 			csHeatmap,
 			csCluster,
+			csSpecificity,
 			fpkmMatrix,
 			diffData,
 			features,
@@ -46,6 +47,7 @@ exportMethods(
 export("readCufflinks",
 		"JSdist",
 		"JSdistVec",
+		"JSdistFromP",
 		"shannon.entropy",
 		"makeprobs",
 		"makeprobsvec",
