@@ -3,6 +3,11 @@ v1.1.3
 		- Added ability in getSig() to limit retrieval of significant genes to two provided conditions (arguments x & y). (reduces time for function call if you have a specific comparison in mind a priori)
 		- When you specify x & y with getSig(), q-values are recalculated from just those selected tests to reduce impact of multiple testing correction.
 		- You can now specify an 'alpha' for getSig() [ 0.05 by default to match cuffdiff default ] by which to filter the resulting significance calls.
+		- Added csSpecificity() method:  This method returns a feature-X-condition matrix (similar to fpkmMatrix) that provides a 'condition-specificity' score  
+			* defined as 1-(JSdist(p,q))
+			  where p is is the density of expression (probability vector of log(FPKM+1)) of a given gene across all conditions, 
+			  and q is the unit vector for that condition (ie. perfect expression in that particular condition)
+			* specificity = 1.0 if the feature is expressed exclusively in that condition
 	
 	Bugfixes:
 		- Fixed bug in getGenes that may have resulted in long query lag for retrieving promoter diffData.
@@ -14,6 +19,7 @@ v1.1.3
 		- Updated vignette
 		- A 'fullnames' logical argument was added to fpkmMatrix. If True, rownames for fpkmMatrix will be a concatenation of gene_short_name and tracking_id.
 		This has the added benefit of making row labels in csHeatmap easier to read, as well as preserving uniqueness. 
+		- Slight speed improvements to JSdist (noticeable when using csCluster).
 	
 v1.1.1
 	Bugfixes:
